--- a/k8s/deploy-svc.yaml
+++ b/k8s/deploy-svc.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: zero-aks-demo
-          image: zeroacrdemo.azurecr.io/zerobig-containerapps-demo:latest
+          image: zeroacrdemo.azurecr.io/zerobig-appmod-demo:latest
           ports:
             - containerPort: 8080
 ---
